# mohr_coulomb_NN

./: .gitignore  README.md  branch_geometry_prototype.py  progress.md  pyproject.toml  report.md  report2.md  requirements.txt  sampling.md
docs/: _smoke_heavy_campaign.md  cover_layer_adaptive_w1024_d6_lr2p5e4.md  cover_layer_b_copula_notes.md  cover_layer_b_copula_screen.md  cover_layer_b_copula_smoke.md  cover_layer_b_copula_smoke2.md  cover_layer_b_copula_smoke3.md  cover_layer_b_copula_smoke4.md  cover_layer_b_copula_stats.md  cover_layer_best_candidate_model_card.md  cover_layer_branch_experts.md  cover_layer_branch_generator_correction_report.md  cover_layer_branch_predictor_best_model_soft_hard_fails.md  cover_layer_branch_predictor_expert_principal.md  cover_layer_branch_predictor_expert_principal_capacity_test.md  cover_layer_branch_predictor_expert_principal_w1024_d6_acceptall_p1_1000_capped2.md  cover_layer_branch_predictor_expert_principal_w1024_d6_lbfgs_1000cycles_replay_eval10_cap16384.md  cover_layer_branch_predictor_expert_principal_w1024_d6_lbfgs_1000cycles_replay_eval10_cap16384_smoke.md  cover_layer_branch_predictor_expert_principal_w1024_d6_lbfgs_100cycles.md  cover_layer_branch_predictor_expert_principal_w1024_d6_lbfgs_10cycles.md  cover_layer_branch_predictor_expert_principal_w1024_d6_long.md  cover_layer_branch_predictor_expert_principal_w1024_d6_posttrain.md  cover_layer_branch_predictor_expert_principal_w1024_d6_resample_10xdata_lr1e6.md  cover_layer_branch_predictor_expert_principal_w1024_d6_resample_v2.md  (+71 more)
notebooks/: mohr_coulomb_demo.ipynb  (+2 more)
(+131 files in other folders)
